tests/a/tests/provenance/fail/fn/fn.0.stderr
error: expected (bin,bin), found (b,bin)
 --> tests/provenance/fail/fn/fn.0.rs:6:5
  |
6 |     x
  |     ^

error: expected (b,b), found (b,bin)
  --> tests/provenance/fail/fn/fn.0.rs:11:16
   |
11 |     let x = id(b::value());
   |                ^^^^^^^^^^
